--- a/lab7/index.html
+++ b/lab7/index.html
@@ -5,10 +5,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab7</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="script.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <title>Погода</title>
 </head>
 
-<body>
+<body onload="main()">
+
+    <div class="Container">
+
+        <div class="header">
+            <div class="WeatherTitle">
+                <img src="images/icon1.png" class="icon">
+                <div class="TextForWeatherTitle">
+                    Погода
+                </div>
+                <img src="images/icon2.png" class="icon">
+            </div>
+
+            <form onsubmit="main(); return false;">
+                <p><input id="city_search" type="text" name="q " placeholder="Введите город ">
+                    <button>Найти</button>
+            </form>
+
+        </div>
+
+        <div class="MainContainer ">
+
+            <div class="Weather">
+
+                <span class="City"></span>
+                <span class="temperature"></span>
+                <span class="condition"></span>
+                <div class="WeatherIndicators ">
+
+
+                    <div class="HumidityContainer">
+                        <img src="images/liticon1.png" class="LittleIcon">
+                        <span class="humidity"></span>
+                    </div>
+
+                    <div class="PressureContainer">
+                        <img src="images/liticon3.png" class="LittleIconForPressure">
+                        <span class="pressure"></span>
+                    </div>
+
+                    <div class="WindContainer">
+                        <img src="images/liticon2.png" class="LittleIcon">
+                        <span class="wind"></span>
+                    </div>
+                </div>
+
+                <!-- <span class="Hours">
+                <div class="Hour1">
+                    <span class="dateh1"></span>
+            <span class="temperatureh1"></span>
+            <span class="conditionh1"></span>
+        </div>
+        <div class="Hour2">
+            <span class="dateh2"></span>
+            <span class="temperatureh2"></span>
+            <span class="conditionh2"></span>
+        </div>
+        <div class="Hour3">
+            <span class="dateh3"></span>
+            <span class="temperatureh3"></span>
+            <span class="conditionh3"></span>
+        </div>
+        </span> -->
+
+            </div>
+        </div>
+
+    </div>
 
 </body>
 
