--- a/lab7/index.html
+++ b/lab7/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <script src="lab7/script.js"></script>
+    <!-- <script src="./script.js"></script> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Погода</title>
 </head>
@@ -79,7 +79,7 @@
         </div>
 
     </div>
-
+    <script src="./script.js"></script>
 </body>
 
 </html>
