--- a/lab7/index.html
+++ b/lab7/index.html
@@ -79,7 +79,7 @@
         </div>
 
     </div>
-    <script src="lab7/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
