--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
     <br>
-    <a href="./lab8/build/index.html">Лабораторная #8</a>
+    <a href="./lab8/build/">Лабораторная #8</a>
 
 
 </body>
