--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <br>
     <a href="./lab8/build/index.html">Лабораторная #8</a>
 
+    <br>
+    <a href="./lab9/build/index.html">Лабораторная #9</a>
 </body>
 
 </html>
